--- a/index.html
+++ b/index.html
@@ -87,58 +87,56 @@ document.addEventListener('DOMContentLoaded', function(e) {
             <div id="about-me" class="section level1">
             <h1>About Me</h1>
             <p>I’m an assistant professor in the <a href="http://www.buffalo.edu/cas/communication.html">Department
-            of Communication</a> at the University at Buffalo (some
-            people prefer SUNY-Buffalo). I graduated with a Ph.D. in
-            mass communication from the <a href="https://journalism.wisc.edu">School of Journalism
+            of Communication</a> at the University at Buffalo
+            (SUNY-Buffalo). I graduated with a Ph.D. in mass
+            communication from the <a href="https://journalism.wisc.edu">School of Journalism
             &amp; Mass Communication at the University of
             Wisconsin-Madison</a>.</p>
             </div>
             <div id="research" class="section level1">
             <h1>Research</h1>
             <p>I study the processes and outcomes of (mostly political)
-            communication, with a particular emphasis on social media.
-            Through my research program, I seek to answer the following
-            three questions.</p>
+            communication, with an emphasis on social media. My research
+            revolves around three fundamental questions:</p>
             <ul>
-            <li>How do individuals express themselves and interact with
-            each other on social media?</li>
-            <li>How do different social media platforms form an
-            ecosystem and relate to one another in terms of information
-            flow?</li>
+            <li>How do individuals express themselves and engage with
+            one another on social media platforms?</li>
+            <li>How do various social media platforms relate to one
+            another in terms of information flow?</li>
             <li>What are the broader implications of communication and
             interaction on social media for journalism and civic
             life?</li>
             </ul>
-            <p>With these three lines of inquiry, I hope to explore how
-            emerging communication technologies are shaping the nature
-            and dynamics of public attention, opinion expression, and
-            information sharing, and their larger societal
-            implications.</p>
+            <p>By pursuing these three lines of inquiry, I hope to
+            explore how emerging communication technologies are shaping
+            the nature and dynamics of public attention, opinion
+            expression, and information sharing, and their larger
+            societal implications.</p>
             <!-- I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. -->
             <p>The methods I use in my research are primarily
-            computational. For my research, I usually collect social
-            media data, conduct automated text analysis using
-            unsupervised and supervised machine learning, perform
-            community detection through various clustering techniques,
-            and run time series modeling. In addition to Twitter, I have
-            expanded my research to other platforms such as Facebook,
-            YouTube, Reddit, Truth Social, and Parler etc. Besides using
-            existing computational methods, I also develop innovative
-            methods in collaboration with colleagues from statistics and
-            computer science to facilitate communication research.</p>
+            computational. My research often entails several key steps:
+            collecting data from social media platforms (e.g., Twitter,
+            YouTube, and Truth Social), conducting automated text
+            analysis using unsupervised and supervised machine learning,
+            performing community detection through various clustering
+            techniques, and running time series modeling. Besides using
+            existing computational methods, I actively collaborate with
+            colleagues from the fields of statistics and computer
+            science to develop innovative approaches specifically
+            tailored for communication research.</p>
             </div>
             <div id="teaching" class="section level1">
             <h1>Teaching</h1>
             <p>I find immense joy in helping students develop their
             skills and knowledge. During my years at UB, I have had the
-            privilege of teaching a variety of courses, including
-            research methods, communication theory, introduction to mass
-            communication, and social media and society at undergraduate
-            and graduate levels. Receiving heartfelt notes from my
-            students expressing their gratitude and appreciation for my
-            teaching has been truly exhilarating. Their feedback serves
-            as a constant inspiration for me to continually update and
-            refine my teaching.</p>
+            privilege of teaching an array of courses at undergraduate
+            and graduate levels, including research methods,
+            communication theory, introduction to mass communication,
+            and social media and society. Receiving heartfelt notes from
+            my students expressing their gratitude and appreciation for
+            my teaching has been truly exhilarating. Their feedback
+            serves as a constant inspiration for me to continually
+            update and enhance my teaching.</p>
             </div>
             <div id="miscellaneous" class="section level1">
             <h1>Miscellaneous</h1>
@@ -151,7 +149,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
             commute.</p>
             <p>My dissertation won an award from the Political
             Communication Division of the American Political Science
-            Association (APSA) :) <a href="files/A%20Network%20Approach%20Summary.pdf">A
+            Association (APSA). <a href="files/A%20Network%20Approach%20Summary.pdf">A
             summary</a> is available.</p>
             <p>I co-founded <a href="https://cemlab.github.io/">the
             Communication and Emerging Media (CEM) lab</a> with <a href="https://comm.uconn.edu/person/jiyoun-suk/">Jiyoun
@@ -203,59 +201,58 @@ document.addEventListener('DOMContentLoaded', function(e) {
               <div id="about-me" class="section level1">
               <h1>About Me</h1>
               <p>I’m an assistant professor in the <a href="http://www.buffalo.edu/cas/communication.html">Department
-              of Communication</a> at the University at Buffalo (some
-              people prefer SUNY-Buffalo). I graduated with a Ph.D. in
-              mass communication from the <a href="https://journalism.wisc.edu">School of Journalism
+              of Communication</a> at the University at Buffalo
+              (SUNY-Buffalo). I graduated with a Ph.D. in mass
+              communication from the <a href="https://journalism.wisc.edu">School of Journalism
               &amp; Mass Communication at the University of
               Wisconsin-Madison</a>.</p>
               </div>
               <div id="research" class="section level1">
               <h1>Research</h1>
               <p>I study the processes and outcomes of (mostly
-              political) communication, with a particular emphasis on
-              social media. Through my research program, I seek to
-              answer the following three questions.</p>
+              political) communication, with an emphasis on social
+              media. My research revolves around three fundamental
+              questions:</p>
               <ul>
-              <li>How do individuals express themselves and interact
-              with each other on social media?</li>
-              <li>How do different social media platforms form an
-              ecosystem and relate to one another in terms of
-              information flow?</li>
+              <li>How do individuals express themselves and engage with
+              one another on social media platforms?</li>
+              <li>How do various social media platforms relate to one
+              another in terms of information flow?</li>
               <li>What are the broader implications of communication and
               interaction on social media for journalism and civic
               life?</li>
               </ul>
-              <p>With these three lines of inquiry, I hope to explore
-              how emerging communication technologies are shaping the
-              nature and dynamics of public attention, opinion
-              expression, and information sharing, and their larger
-              societal implications.</p>
+              <p>By pursuing these three lines of inquiry, I hope to
+              explore how emerging communication technologies are
+              shaping the nature and dynamics of public attention,
+              opinion expression, and information sharing, and their
+              larger societal implications.</p>
               <!-- I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. -->
               <p>The methods I use in my research are primarily
-              computational. For my research, I usually collect social
-              media data, conduct automated text analysis using
-              unsupervised and supervised machine learning, perform
-              community detection through various clustering techniques,
-              and run time series modeling. In addition to Twitter, I
-              have expanded my research to other platforms such as
-              Facebook, YouTube, Reddit, Truth Social, and Parler etc.
-              Besides using existing computational methods, I also
-              develop innovative methods in collaboration with
-              colleagues from statistics and computer science to
-              facilitate communication research.</p>
+              computational. My research often entails several key
+              steps: collecting data from social media platforms (e.g.,
+              Twitter, YouTube, and Truth Social), conducting automated
+              text analysis using unsupervised and supervised machine
+              learning, performing community detection through various
+              clustering techniques, and running time series modeling.
+              Besides using existing computational methods, I actively
+              collaborate with colleagues from the fields of statistics
+              and computer science to develop innovative approaches
+              specifically tailored for communication research.</p>
               </div>
               <div id="teaching" class="section level1">
               <h1>Teaching</h1>
               <p>I find immense joy in helping students develop their
               skills and knowledge. During my years at UB, I have had
-              the privilege of teaching a variety of courses, including
-              research methods, communication theory, introduction to
-              mass communication, and social media and society at
-              undergraduate and graduate levels. Receiving heartfelt
-              notes from my students expressing their gratitude and
-              appreciation for my teaching has been truly exhilarating.
-              Their feedback serves as a constant inspiration for me to
-              continually update and refine my teaching.</p>
+              the privilege of teaching an array of courses at
+              undergraduate and graduate levels, including research
+              methods, communication theory, introduction to mass
+              communication, and social media and society. Receiving
+              heartfelt notes from my students expressing their
+              gratitude and appreciation for my teaching has been truly
+              exhilarating. Their feedback serves as a constant
+              inspiration for me to continually update and enhance my
+              teaching.</p>
               </div>
               <div id="miscellaneous" class="section level1">
               <h1>Miscellaneous</h1>
@@ -268,7 +265,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
               daily commute.</p>
               <p>My dissertation won an award from the Political
               Communication Division of the American Political Science
-              Association (APSA) :) <a href="files/A%20Network%20Approach%20Summary.pdf">A
+              Association (APSA). <a href="files/A%20Network%20Approach%20Summary.pdf">A
               summary</a> is available.</p>
               <p>I co-founded <a href="https://cemlab.github.io/">the
               Communication and Emerging Media (CEM) lab</a> with <a href="https://comm.uconn.edu/person/jiyoun-suk/">Jiyoun
