--- a/index.html
+++ b/index.html
@@ -88,30 +88,28 @@ document.addEventListener('DOMContentLoaded', function(e) {
             <h1>About Me</h1>
             <p>I’m an assistant professor in the <a href="http://www.buffalo.edu/cas/communication.html">Department
             of Communication</a> at the University at Buffalo
-            (SUNY-Buffalo). I graduated with a Ph.D. in mass
-            communication from the <a href="https://journalism.wisc.edu">School of Journalism
-            &amp; Mass Communication at the University of
+            (SUNY-Buffalo). I graduated with a Ph.D. in communication
+            from the <a href="https://journalism.wisc.edu">School of
+            Journalism &amp; Mass Communication at the University of
             Wisconsin-Madison</a>.</p>
             </div>
             <div id="research" class="section level1">
             <h1>Research</h1>
-            <p>I study the processes and outcomes of (mostly political)
-            communication, with an emphasis on social media. My research
-            revolves around three fundamental questions:</p>
+            <p>I study social media, focusing on how social media shapes
+            the information ecology in the context of political
+            communication processes and outcomes. My approach considers
+            both the technological/structural and user aspects of social
+            media. Specifically, my research program is driven by three
+            interlinked questions:</p>
             <ul>
-            <li>How do individuals express themselves and engage with
-            one another on social media platforms?</li>
-            <li>How do various social media platforms relate to one
-            another in terms of information flow?</li>
-            <li>What are the broader implications of communication and
-            interaction on social media for journalism and civic
+            <li>How do social media platforms facilitate communication
+            and interaction on social media?</li>
+            <li>How do platforms relate to one another within the social
+            media ecosystem?</li>
+            <li>What are the broader implications of the current
+            information ecology for our mediated world and public
             life?</li>
             </ul>
-            <p>By pursuing these three lines of inquiry, I hope to
-            explore how emerging communication technologies are shaping
-            the nature and dynamics of public attention, opinion
-            expression, and information sharing, and their larger
-            societal implications.</p>
             <!-- I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. -->
             <p>The methods I use in my research are primarily
             computational. My research often entails several key steps:
@@ -128,36 +126,40 @@ document.addEventListener('DOMContentLoaded', function(e) {
             <div id="teaching" class="section level1">
             <h1>Teaching</h1>
             <p>I find immense joy in helping students develop their
-            skills and knowledge. During my years at UB, I have had the
-            privilege of teaching an array of courses at undergraduate
-            and graduate levels, including research methods,
-            communication theory, introduction to mass communication,
-            and social media and society. Receiving heartfelt notes from
-            my students expressing their gratitude and appreciation for
-            my teaching has been truly exhilarating. Their feedback
-            serves as a constant inspiration for me to continually
-            update and enhance my teaching.</p>
+            skills and knowledge. At UB, I have had the privilege of
+            teaching an array of courses at undergraduate and graduate
+            levels. These include subjects such as social media and
+            society, introduction to mass communication, research
+            methods, and communication theory. The heartfelt notes of
+            gratitude and appreciation from my students are a continuous
+            source of motivation, inspiring me to consistently enhance
+            my teaching methods.</p>
+            </div>
+            <div id="research-lab" class="section level1">
+            <h1>Research Lab</h1>
+            <p>In my research lab, <a href="https://cemlab.github.io/">the Communication and
+            Emerging Media (CEM) lab</a>, I lead graduate and
+            undergraduate students at UB and beyond to work on my
+            research projects and help them launch their own projects.
+            We have been doing cool research in the basement of Baldy
+            and on Zoom. Check out our recent publications and on-going
+            work on our lab website.</p>
             </div>
             <div id="miscellaneous" class="section level1">
             <h1>Miscellaneous</h1>
-            <p>Apart from doing research and teaching, I like playing
-            with my little one (and his friends), traveling, cooking
-            comfort food, and watching talk shows, movies, and TV
-            series. I used to be a big fan of classical and rock music,
-            but as time goes by I find myself gravitating toward
-            podcasts, something I enjoy listening to during my daily
-            commute.</p>
+            <p>Beyond my passion for research and teaching, I like
+            playing with my little one (and his friends), traveling,
+            cooking comfort food, and watching talk shows, movies, and
+            TV series. I used to be a big fan of classical and rock
+            music, but as time goes by I find myself gravitating toward
+            the world of podcasts, something I enjoy listening to during
+            my daily commute. I’m continually on the lookout for podcast
+            recommendations!</p>
             <p>My dissertation won an award from the Political
             Communication Division of the American Political Science
             Association (APSA). <a href="files/A%20Network%20Approach%20Summary.pdf">A
             summary</a> is available.</p>
-            <p>I co-founded <a href="https://cemlab.github.io/">the
-            Communication and Emerging Media (CEM) lab</a> with <a href="https://comm.uconn.edu/person/jiyoun-suk/">Jiyoun
-            Suk</a> and <a href="https://scholar.google.com/citations?user=Wp2p7ksAAAAJ&amp;hl=en">Nojin
-            Kwak</a>. We have been doing cool research in the basement
-            of Baldy and on Zoom. Check out our recent publications and
-            on-going work on our lab site.</p>
-            <p>My full CV is available <a href="files/ZHANG_CV_Mar23.pdf">here</a>.</p>
+            <p>My full CV is available <a href="files/Yini%20ZHANG_Oct23.pdf">here</a>.</p>
             </div>
           </div>
         </div>
@@ -202,31 +204,28 @@ document.addEventListener('DOMContentLoaded', function(e) {
               <h1>About Me</h1>
               <p>I’m an assistant professor in the <a href="http://www.buffalo.edu/cas/communication.html">Department
               of Communication</a> at the University at Buffalo
-              (SUNY-Buffalo). I graduated with a Ph.D. in mass
-              communication from the <a href="https://journalism.wisc.edu">School of Journalism
-              &amp; Mass Communication at the University of
+              (SUNY-Buffalo). I graduated with a Ph.D. in communication
+              from the <a href="https://journalism.wisc.edu">School of
+              Journalism &amp; Mass Communication at the University of
               Wisconsin-Madison</a>.</p>
               </div>
               <div id="research" class="section level1">
               <h1>Research</h1>
-              <p>I study the processes and outcomes of (mostly
-              political) communication, with an emphasis on social
-              media. My research revolves around three fundamental
-              questions:</p>
+              <p>I study social media, focusing on how social media
+              shapes the information ecology in the context of political
+              communication processes and outcomes. My approach
+              considers both the technological/structural and user
+              aspects of social media. Specifically, my research program
+              is driven by three interlinked questions:</p>
               <ul>
-              <li>How do individuals express themselves and engage with
-              one another on social media platforms?</li>
-              <li>How do various social media platforms relate to one
-              another in terms of information flow?</li>
-              <li>What are the broader implications of communication and
-              interaction on social media for journalism and civic
+              <li>How do social media platforms facilitate communication
+              and interaction on social media?</li>
+              <li>How do platforms relate to one another within the
+              social media ecosystem?</li>
+              <li>What are the broader implications of the current
+              information ecology for our mediated world and public
               life?</li>
               </ul>
-              <p>By pursuing these three lines of inquiry, I hope to
-              explore how emerging communication technologies are
-              shaping the nature and dynamics of public attention,
-              opinion expression, and information sharing, and their
-              larger societal implications.</p>
               <!-- I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. -->
               <p>The methods I use in my research are primarily
               computational. My research often entails several key
@@ -243,37 +242,40 @@ document.addEventListener('DOMContentLoaded', function(e) {
               <div id="teaching" class="section level1">
               <h1>Teaching</h1>
               <p>I find immense joy in helping students develop their
-              skills and knowledge. During my years at UB, I have had
-              the privilege of teaching an array of courses at
-              undergraduate and graduate levels, including research
-              methods, communication theory, introduction to mass
-              communication, and social media and society. Receiving
-              heartfelt notes from my students expressing their
-              gratitude and appreciation for my teaching has been truly
-              exhilarating. Their feedback serves as a constant
-              inspiration for me to continually update and enhance my
-              teaching.</p>
+              skills and knowledge. At UB, I have had the privilege of
+              teaching an array of courses at undergraduate and graduate
+              levels. These include subjects such as social media and
+              society, introduction to mass communication, research
+              methods, and communication theory. The heartfelt notes of
+              gratitude and appreciation from my students are a
+              continuous source of motivation, inspiring me to
+              consistently enhance my teaching methods.</p>
+              </div>
+              <div id="research-lab" class="section level1">
+              <h1>Research Lab</h1>
+              <p>In my research lab, <a href="https://cemlab.github.io/">the Communication and
+              Emerging Media (CEM) lab</a>, I lead graduate and
+              undergraduate students at UB and beyond to work on my
+              research projects and help them launch their own projects.
+              We have been doing cool research in the basement of Baldy
+              and on Zoom. Check out our recent publications and
+              on-going work on our lab website.</p>
               </div>
               <div id="miscellaneous" class="section level1">
               <h1>Miscellaneous</h1>
-              <p>Apart from doing research and teaching, I like playing
-              with my little one (and his friends), traveling, cooking
-              comfort food, and watching talk shows, movies, and TV
-              series. I used to be a big fan of classical and rock
+              <p>Beyond my passion for research and teaching, I like
+              playing with my little one (and his friends), traveling,
+              cooking comfort food, and watching talk shows, movies, and
+              TV series. I used to be a big fan of classical and rock
               music, but as time goes by I find myself gravitating
-              toward podcasts, something I enjoy listening to during my
-              daily commute.</p>
+              toward the world of podcasts, something I enjoy listening
+              to during my daily commute. I’m continually on the lookout
+              for podcast recommendations!</p>
               <p>My dissertation won an award from the Political
               Communication Division of the American Political Science
               Association (APSA). <a href="files/A%20Network%20Approach%20Summary.pdf">A
               summary</a> is available.</p>
-              <p>I co-founded <a href="https://cemlab.github.io/">the
-              Communication and Emerging Media (CEM) lab</a> with <a href="https://comm.uconn.edu/person/jiyoun-suk/">Jiyoun
-              Suk</a> and <a href="https://scholar.google.com/citations?user=Wp2p7ksAAAAJ&amp;hl=en">Nojin
-              Kwak</a>. We have been doing cool research in the basement
-              of Baldy and on Zoom. Check out our recent publications
-              and on-going work on our lab site.</p>
-              <p>My full CV is available <a href="files/ZHANG_CV_Mar23.pdf">here</a>.</p>
+              <p>My full CV is available <a href="files/Yini%20ZHANG_Oct23.pdf">here</a>.</p>
               </div>
             </div>
         </div>
