--- a/index.html
+++ b/index.html
@@ -95,20 +95,18 @@ document.addEventListener('DOMContentLoaded', function(e) {
             </div>
             <div id="research" class="section level1">
             <h1>Research</h1>
-            <p>I study social media, focusing on how social media shapes
-            the information ecology in the context of political
-            communication processes and outcomes. My approach considers
-            both the technological/structural and user aspects of social
-            media. Specifically, my research program is driven by three
-            interlinked questions:</p>
+            <p>I study social media, focusing on how it affects the
+            media ecosystem and political communication. My approach
+            considers both the technological/structural and user aspects
+            of social media. Specifically, my research program is driven
+            by three interlinked questions:</p>
             <ul>
             <li>How do social media platforms facilitate communication
             and interaction on social media?</li>
-            <li>How do platforms relate to one another within the social
-            media ecosystem?</li>
-            <li>What are the broader implications of the current
-            information ecology for our mediated world and public
-            life?</li>
+            <li>How do users shape the social media ecosystem and how do
+            they play a role in the larger media ecosystem?</li>
+            <li>What are the broader implications of the current media
+            ecosystem for our mediated world and public life?</li>
             </ul>
             <!-- I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. -->
             <p>The methods I use in my research are primarily
@@ -120,8 +118,8 @@ document.addEventListener('DOMContentLoaded', function(e) {
             techniques, and running time series modeling. Besides using
             existing computational methods, I actively collaborate with
             colleagues from the fields of statistics and computer
-            science to develop innovative approaches specifically
-            tailored for communication research.</p>
+            science to develop innovative approaches tailored for
+            communication research.</p>
             </div>
             <div id="teaching" class="section level1">
             <h1>Teaching</h1>
@@ -133,12 +131,12 @@ document.addEventListener('DOMContentLoaded', function(e) {
             methods, and communication theory. The heartfelt notes of
             gratitude and appreciation from my students are a continuous
             source of motivation, inspiring me to consistently enhance
-            my teaching methods.</p>
+            my teaching.</p>
             </div>
             <div id="research-lab" class="section level1">
             <h1>Research Lab</h1>
-            <p>In my research lab, <a href="https://cemlab.github.io/">the Communication and
-            Emerging Media (CEM) lab</a>, I lead graduate and
+            <p>In <a href="https://cemlab.github.io/">the Communication
+            and Emerging Media (CEM) lab</a>, I lead graduate and
             undergraduate students at UB and beyond to work on my
             research projects and help them launch their own projects.
             We have been doing cool research in the basement of Baldy
@@ -148,13 +146,11 @@ document.addEventListener('DOMContentLoaded', function(e) {
             <div id="miscellaneous" class="section level1">
             <h1>Miscellaneous</h1>
             <p>Beyond my passion for research and teaching, I like
-            playing with my little one (and his friends), traveling,
-            cooking comfort food, and watching talk shows, movies, and
-            TV series. I used to be a big fan of classical and rock
-            music, but as time goes by I find myself gravitating toward
-            the world of podcasts, something I enjoy listening to during
-            my daily commute. I’m continually on the lookout for podcast
-            recommendations!</p>
+            playing with my little one (and his friends). I used to be a
+            big fan of classical and rock music, but as time goes by I
+            find myself gravitating toward the world of podcasts,
+            something I enjoy listening to during my daily commute. I’m
+            continually on the lookout for podcast recommendations!</p>
             <p>My dissertation won an award from the Political
             Communication Division of the American Political Science
             Association (APSA). <a href="files/A%20Network%20Approach%20Summary.pdf">A
@@ -211,20 +207,18 @@ document.addEventListener('DOMContentLoaded', function(e) {
               </div>
               <div id="research" class="section level1">
               <h1>Research</h1>
-              <p>I study social media, focusing on how social media
-              shapes the information ecology in the context of political
-              communication processes and outcomes. My approach
+              <p>I study social media, focusing on how it affects the
+              media ecosystem and political communication. My approach
               considers both the technological/structural and user
               aspects of social media. Specifically, my research program
               is driven by three interlinked questions:</p>
               <ul>
               <li>How do social media platforms facilitate communication
               and interaction on social media?</li>
-              <li>How do platforms relate to one another within the
-              social media ecosystem?</li>
-              <li>What are the broader implications of the current
-              information ecology for our mediated world and public
-              life?</li>
+              <li>How do users shape the social media ecosystem and how
+              do they play a role in the larger media ecosystem?</li>
+              <li>What are the broader implications of the current media
+              ecosystem for our mediated world and public life?</li>
               </ul>
               <!-- I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. -->
               <p>The methods I use in my research are primarily
@@ -237,7 +231,7 @@ document.addEventListener('DOMContentLoaded', function(e) {
               Besides using existing computational methods, I actively
               collaborate with colleagues from the fields of statistics
               and computer science to develop innovative approaches
-              specifically tailored for communication research.</p>
+              tailored for communication research.</p>
               </div>
               <div id="teaching" class="section level1">
               <h1>Teaching</h1>
@@ -249,28 +243,27 @@ document.addEventListener('DOMContentLoaded', function(e) {
               methods, and communication theory. The heartfelt notes of
               gratitude and appreciation from my students are a
               continuous source of motivation, inspiring me to
-              consistently enhance my teaching methods.</p>
+              consistently enhance my teaching.</p>
               </div>
               <div id="research-lab" class="section level1">
               <h1>Research Lab</h1>
-              <p>In my research lab, <a href="https://cemlab.github.io/">the Communication and
-              Emerging Media (CEM) lab</a>, I lead graduate and
-              undergraduate students at UB and beyond to work on my
-              research projects and help them launch their own projects.
-              We have been doing cool research in the basement of Baldy
-              and on Zoom. Check out our recent publications and
-              on-going work on our lab website.</p>
+              <p>In <a href="https://cemlab.github.io/">the
+              Communication and Emerging Media (CEM) lab</a>, I lead
+              graduate and undergraduate students at UB and beyond to
+              work on my research projects and help them launch their
+              own projects. We have been doing cool research in the
+              basement of Baldy and on Zoom. Check out our recent
+              publications and on-going work on our lab website.</p>
               </div>
               <div id="miscellaneous" class="section level1">
               <h1>Miscellaneous</h1>
               <p>Beyond my passion for research and teaching, I like
-              playing with my little one (and his friends), traveling,
-              cooking comfort food, and watching talk shows, movies, and
-              TV series. I used to be a big fan of classical and rock
-              music, but as time goes by I find myself gravitating
-              toward the world of podcasts, something I enjoy listening
-              to during my daily commute. I’m continually on the lookout
-              for podcast recommendations!</p>
+              playing with my little one (and his friends). I used to be
+              a big fan of classical and rock music, but as time goes by
+              I find myself gravitating toward the world of podcasts,
+              something I enjoy listening to during my daily commute.
+              I’m continually on the lookout for podcast
+              recommendations!</p>
               <p>My dissertation won an award from the Political
               Communication Division of the American Political Science
               Association (APSA). <a href="files/A%20Network%20Approach%20Summary.pdf">A
